force-app/main/default/objects/Appointment_c__c/Appointment_c__c.object-meta.xml
<CustomObject>
    <label>Appointment__c</label>
    <nameField>
        <label>Appointment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>