force-app/main/default/objects/Appointment_c__c/fields/Countdown_Days__c.field-meta.xml
<CustomField>
    <fullName>Countdown_Days__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Status__c, &quot;Completed&quot;),
        ISPICKVAL(Status__c, &quot;Canceled&quot;)
    ),
    0,
    DATEVALUE(Start_Time__c) - TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Countdown Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>