force-app/main/default/objects/Appointment_c__c/fields/Doctor_c__c.field-meta.xml
<CustomField>
    <fullName>Doctor_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor Link</label>
    <referenceTo>Doctor_c__c</referenceTo>
    <relationshipLabel>Doctor</relationshipLabel>
    <relationshipName>Doctor</relationshipName>
    <type>Lookup</type>
</CustomField>