force-app/main/default/objects/Appointment_c__c/fields/Is_Past_Due_c__c.field-meta.xml
<CustomField>
    <fullName>Is_Past_Due_c__c</fullName>
    <formula>IF(AND(Start_Time__c &lt; NOW(), ISPICKVAL(Status__c, &quot;Scheduled&quot;)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Past_Due__c</label>
    <type>Checkbox</type>
</CustomField>