force-app/main/default/objects/Appointment_c__c/validationRules/appointment_cancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>appointment_cancellation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Cancelled&quot;),
ISBLANK(Cancellation_Reason__c))</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>&quot;A cancellation reason is
required to cancel an
appointment.&quot;</errorMessage>
</ValidationRule>