force-app/main/default/objects/Appointment_c__c/validationRules/appointment_doctor.validationRule-meta.xml
<ValidationRule>
    <fullName>appointment_doctor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Doctor_c__c),
ISPICKVAL(Status__c, &quot;In Progress&quot;))</errorConditionFormula>
    <errorDisplayField>Doctor_c__c</errorDisplayField>
    <errorMessage>&quot;The assigned provider
cannot be changed mid
visit.&quot;</errorMessage>
</ValidationRule>