force-app/main/default/objects/Appointment_c__c/validationRules/appointment_duration.validationRule-meta.xml
<ValidationRule>
    <fullName>appointment_duration</fullName>
    <active>true</active>
    <errorConditionFormula>Duration_Minutes__c &lt;= 5</errorConditionFormula>
    <errorDisplayField>Duration_Minutes__c</errorDisplayField>
    <errorMessage>&quot;Appointment duration
must be greater than 5
minutes.&quot;</errorMessage>
</ValidationRule>