force-app/main/default/objects/Appointment_c__c/validationRules/appointment_schedule.validationRule-meta.xml
<ValidationRule>
    <fullName>appointment_schedule</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Time__c &lt; NOW()</errorConditionFormula>
    <errorDisplayField>Start_Time__c</errorDisplayField>
    <errorMessage>&quot;Appointment scheduling
times must be set in the
future.&quot;</errorMessage>
</ValidationRule>