force-app/main/default/objects/Appointment_c__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Patient_c__c</columns>
    <columns>Doctor_c__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Start_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>